# Local_VPN_starter

./: LocalVPNExceptions.py  main.py  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflow/: python-app.yml
.github/workflows/: python-app.yml
src/configs_setup/: LocalVPNExceptions.py  __init__.py  main.py
tests/: test_configs_setup.py
tests/WireGuard/Data/Configurations/: test.conf
