[metadata]
name = LocalVPNStarter
description = Creates a server and clients WireGuard configs
author = Ivan Solaris
platform = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    configs_setup
python_packages >=3.8
package_dir =
    =src
zip_safe = no

[option.extras_require]
testing =
    flake8>=7.3.0
    pytest>=8.4.1
    pytest-cov>=6.2.1
    mypy>=1.17.1
    mypy-extensions>=1.1.0

[option.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
